# Poject_rgb-d

./: CMakeLists.txt  README.md
src/: kinect_plugin.cpp  main.cpp  obstacle_detection.cpp  rgb-d.cpp  rgb-d_publisher.cpp  voxel.cpp
urdf/: head.dae  head.xacro  main.xacro
